@@ -1,3 +1,3 @@
-/nekoc.n/1.40/Wed Sep  1 11:39:23 2010/-kb/
-/nekoml.n/1.42/Wed Sep  1 11:39:25 2010/-kb/
+/nekoc.n/1.40/Mon Sep 13 01:53:08 2010/-kb/
+/nekoml.n/1.42/Mon Sep 13 01:53:08 2010/-kb/
 D
