@@ -17,6 +17,6 @@
 /load.c/1.58/Tue May 18 10:56:09 2010//
 /alloc.c/1.80/Fri May 28 20:50:45 2010//
 /neko.h/1.67/Result of merge//
-/builtins.c/1.69/Result of merge//
 /others.c/1.50/Mon Aug 30 11:11:59 2010//
+/builtins.c/1.70/Result of merge//
 D
