@@ -10,6 +10,7 @@
 	std : fixed timeout error for sockets on Windows
 	mod_tora : added PROXY_MODE configuration
 	std : fixed timeout error for sockets on Linux
+	vm : fixed $int and $float - return null on invalid strings
 
 2009-07-26 : 1.8.1
 	nekoc : small fix in evaluation of using jump tables for switch on integers
